--- a/.github/workflows/filters-compile.yaml
+++ b/.github/workflows/filters-compile.yaml
@@ -21,7 +21,7 @@ jobs:
           python-version: '3.10'
       - run: |
           go install github.com/mikefarah/yq/v4@latest
-          pip install yamllint
+          pip install PyYAML yamllint
           sudo apt install jq -y
       - run: make compile
       - run: |
