--- a/.github/workflows/filters-compile.yaml
+++ b/.github/workflows/filters-compile.yaml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
         with:
-          go-version: '1.18'
+          go-version: 'stable'
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
