--- a/src/filters.yaml
+++ b/src/filters.yaml
@@ -638,7 +638,7 @@ filters:
     impact: 10
 
   - id: 79
-    rule: ((burpcollaborator|pipedream)\.net|(canarytokens|requestrepo)\.com|oast\.(online|(liv|sit|m)e|fun|pro))
+    rule: ((burpcollaborator|pipedream)\.net|(canarytokens|requestrepo)\.com|oast\.(online|(liv|sit|m)e|fun|pro)|\.ngrok(\-free\.(app|dev)|\.((app|io)|dev)))
     description: Detects out-of-band (OOB) interaction or Server-Side Request Forgery (SSRF) attack attempts
     tags:
       - ssrf
